tests/5-keystrokes-to-setup-a-cluster-without-root-privilege/lib/overlay/root/sge/firewall/overlay/etc/iptables/iptables.rules
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A POSTROUTING -o ens3 -j MASQUERADE
COMMIT

*filter
:INPUT DROP [0:0]
:FORWARD DROP  [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -i ens4 -j ACCEPT
-A INPUT -i ens3 -p tcp -m state --state NEW -m multiport --dports 12345 -j ACCEPT
-A FORWARD -o ens4 -i ens3 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens4 -o ens3 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens4 -o ens3 -p tcp -m state --state NEW -m multiport --dports 22,80,443 -j ACCEPT
COMMIT
